@@ -1,5 +1,10 @@
 2007-06-21  Martin Leidig  <mleidig@schlund.de>
 
+	* src/de/schlund/pfixxml/AbstractXMLServer.java: Use trailLogged flag instead 
+	of reuse flag for logging of result tree.
+
+2007-06-21  Martin Leidig  <mleidig@schlund.de>
+
 	Fixed changed trail logging behaviour: instead of reuse flag the new
 	trailLogged flag in SPDocument is used to decide if a trail has to be logged.
 
